# SFML-Boilerplate

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
libs/imgui-entt-entity-editor/: imgui-entt-entity-editor.h
src/: game.cpp  game.h  main.cpp  utils.cpp  utils.h
